# monkey-minder

./: .editorconfig  .golangci.toml  Dockerfile  Makefile  README.md  compose.yaml  go.mod  monkeyminder_client.go
client/: client.go  main.go
client/internal/client/: client.go
client/lib/: client.go
common/proto/: clientapi.proto
proto/: monkeyminder_service.proto
report/: .gitignore  Dockerfile  Makefile  README.md  client-server-seq.mmd  implementation-components.puml  log-diagram-structure.mmd  log-diagram.mmd  raft-election.mmd  raft-rpc-flow.mmd  report.tex  sources.bib
report/sections/: challenges.tex  conclusions.tex  demonstration.tex  design.tex  evaluation.tex  goals.tex  implementation.tex  performance.tex  prior_art.tex  testing.tex
server/: cluster.conf  main.go
server/internal/: raft.go
server/internal/log/: indices.go  log.go  log_test.go
server/internal/monkeyminder/: clientmsg.go
server/internal/raft/: candidate.go  clientsession.go  follower.go  leader.go  raft.go  rpcs.go  server.go  watches.go
server/internal/tree/: tree.go
server/internal/tree_test/: tree_demo.go
server/log/: log.go  log_test.go
server/proto/raft/: election.proto  log.proto  raft.proto
tester/: .gitignore  README.md  pyproject.toml
tester/src/: mmtester.py  tests.py
tester/src/mmtester/: __init__.py  demo.py
